[package]
name = "dwanium"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.26", features = ["serde"] }
dotenv = "0.15.0"
oauth2 = "4.3.0"
reqwest = { version = "0.11.14", features = ["json"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.24.2", features = ["full"] }
